# satellite-anomaly-detection

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
configs/: autoencoder.yaml  classifier.yaml
docs/: architecture.md  data_format.md
models/: autoencoder.pth  autoencoder_best.pth  classifier.pth
notebooks/: 01_data_exploration.ipynb  02_train_autoencoder.ipynb  03_train_classifier.ipynb
results/: metrics.md
src/sat_anomaly/: __init__.py  cli.py  config.py
src/sat_anomaly/data/: __init__.py  labeling.py  loader.py  merge_channels.py  preprocessor.py
src/sat_anomaly/models/: __init__.py  autoencoder.py  classifier.py  training.py
src/sat_anomaly/visualization/: plots.py
tests/: test_config.py  test_labeling.py  test_models.py  test_preprocessing.py
